css/styles.css
html,
body {
  height: 100%;
  margin: 0;
}

body {
  font-family: "Khula", serif;
  font-weight: 400;
  font-style: normal;
  background-color: #1e2d40;
  color: white;
  margin: 0px;
  display: flex;
  flex-direction: column;
}

header {
  display: flex;
  justify-content: space-between;
  padding: 10px 20px;
  position: relative;
  align-items: center;
}

main {
  padding-left: 20px;
  flex-grow: 1;
}

h1 {
  font-family: "Noticia Text", serif;
  font-weight: 600;
  font-style: normal;

  padding-left: 0;
  text-align: center;
}

h2 {
  font-family: "Ruda", serif;
  font-weight: 400;
  font-style: normal;
}

footer,
header {
  background-color: #bbc0c6;
  color: black;
}

/*Header*/

.hamburger-icon {
  padding: 0;
  font-size: 35px;
}

.current {
  text-decoration: underline;
}

.logo {
  height: auto;
  width: 140px;
}

.cart {
  height: auto;
  width: 25px;
  margin: 0px;
}
/*End header*/

nav {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  position: absolute;
  right: 0;
  top: 100%;
  background-color: #bbc0c6;
}

nav a {
  text-decoration: none;
  display: block;
  color: black;
  padding: 5px 35px;
}

nav,
#menu-checkbox {
  display: none;
}

#menu-checkbox:checked ~ nav {
  display: block;
}

.heading-container {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
}

.back-button {
  position: absolute;
  left: 0;
  display: inline-block;
  text-decoration: none;
  margin-top: 20px;
  color: white;
  font-size: 25px;
}

.back-button:hover {
  cursor: pointer;
}

/*Home page*/
.top-section {
  background-color: #000000;
  background-image: url("../images/avatar-hero.png");
  height: 400px;
  background-size: contain;
  background-position: right;
  background-repeat: no-repeat;
  margin-left: -20px;
  padding-left: 20px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.top-section-content h1,
.top-section-content p {
  width: 120px;
}

.top-section h1 {
  text-align: left;
  font-size: 25px;
  margin-top: 0;
}

.top-section p {
  font-size: 15px;
}

.top-section a {
  text-decoration: none;
  background-color: #ada76e;
  padding: 10px 30px;
  color: black;
  border-radius: 15px;
  display: inline-block;
  font-size: 15px;
}

.movie-covers img {
  height: 400px;
  padding: 10px 20px 20px 0px;
}

.movie-covers a {
  padding: 0;
}

/*End home page*/

/*Category labels on home page*/
input[type="radio"] {
  display: none;
}

input[type="radio"]:checked + label {
  color: #ada76e;
}

.content {
  display: none;
}

#action:checked ~ .content.action {
  display: block;
}

#comedy:checked ~ .content.comedy {
  display: block;
}

#horror:checked ~ .content.horror {
  display: block;
}

label:hover {
  cursor: pointer;
}

label {
  display: inline-block;
  font-size: 18px;
  padding: 40px 20px 10px 0px;
}
/*End category labels on home page*/

/*Video page*/
.movie-grid {
  display: grid;
  grid-template-columns: 1 fr;
  justify-content: center;
}

.movie-covers h2 {
  text-align: center;
}

.movie-cover-checkout {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.movie-cover-checkout img {
  width: 300px;
  height: auto;
}

.movie-cover-checkout-textcontent {
  text-align: left;
  width: 350px;
  margin-top: 20px;
}

.movie-cover-checkout-textcontent :first-child {
  margin-bottom: 20px;
}

.movie-cover-checkout-textcontent p {
  margin: 0px;
}

.movie-cover-checkout-buttons {
  margin: 20px 0;
  display: flex;
  justify-content: center;
  width: 350px;
  gap: 20px;
}

.movie-cover-checkout-buttons a {
  text-decoration: none;
  text-align: center;
  background-color: #ada76e;
  padding: 10px 20px;
  color: black;
  border-radius: 15px;
  font-size: 20px;
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

/*End video page*/

/*About us-page*/
.aboutus-content {
  display: flex;
  flex-direction: column;
  margin: auto;
}

.aboutus-content p {
  width: 80%;
  margin: auto;
  padding: 10px;
}

.aboutus-buttons {
  display: flex;
  justify-content: center;
  gap: 20px;
  margin: 20px 0px 30px 0px;
}

.aboutus-buttons a {
  text-decoration: none;
  text-align: center;
  background-color: #ada76e;
  padding: 15px 35px;
  color: black;
  border-radius: 15px;
  font-size: 20px;
}

.ref-buttons {
  text-align: center;
  margin-top: 20px !important;
}

/*End about us-page*/

/*Checkout page*/
.checkout-cart h2 {
  font-size: 35px;
  margin: 0;
}

.checkout-cart h3 {
  font-size: 25px;
  color: #bf7665;
  margin: 0px 0px 20px 0px;
}

.checkout {
  display: flex;
  flex-direction: column;
  max-width: 600px;
  margin: 20px 50px 20px 20px;
}

.checkout-cart {
  background-color: #405173;
  padding: 20px;
  border-radius: 10px 10px 0 0;
}

.checkout-cart img {
  height: 300px;
  width: auto;
}

.cart-info {
  display: flex;
}

.cart-info-right {
  display: flex;
  flex-direction: column;
  margin: 20px 0 0 20px;
}

.cart-info-right i {
  margin-left: 100px;
}

.cart-info-right p {
  margin: 0;
}

.discount {
  display: flex;
  border: 1px solid;
  border-radius: 15px;
  justify-content: space-between;
  padding: 0 10px;
  margin-bottom: 10px;
}

.discount a {
  margin: 16px 0;
  text-decoration: none;
  color: rgb(140, 134, 134);
}

.order-summary {
  border: 1px solid;
  border-radius: 15px;
  padding: 0 10px;
}

.price {
  display: flex;
  flex-direction: column;
  margin-bottom: 16px;
}

.price p {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin: 0;
}

hr {
  margin: 20px 0;
}

.bold {
  font-weight: bold;
}

.checkout-payment {
  background-color: grey;
  display: flex;
  color: black;
  flex-direction: column;
  background-color: #bbc0c6;
  padding: 20px;
  border-radius: 0 0 10px 10px;
}

.checkout-payment label {
  padding: 0;
  font-size: 15px;
  margin-top: 10px;
}

.checkout-payment h4 {
  font-size: 18px;
  margin: 0;
}

.checkout-payment-space {
  margin-top: 50px !important;
}
/* ... */

